Add /history command

--- a/templates/success.html
+++ b/templates/success.html
@@ -28,6 +28,9 @@
     parameter)
   </li>
   <li><code>/rating [@player]</code> - Check your rating or another player's rating</li>
+  <li>
+    <code>/history [@player]</code> - View your game history or another player's history
+  </li>
   <li><code>/undo</code> - Undo the last game in the channel</li>
   <li><code>/help</code> - View all available commands</li>
 </ul>
