Move all configuration to .env file

--- a/templates/success.html
+++ b/templates/success.html
@@ -31,6 +31,7 @@
   <li>
     <code>/history [@player]</code> - View your game history or another player's history
   </li>
+  <li><code>/kfactor [value]</code> - View or set the k-factor for the channel</li>
   <li><code>/undo</code> - Undo the last game in the channel</li>
   <li><code>/help</code> - View all available commands</li>
 </ul>
