--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>{% block title %}Slackelo - Elo Rating System for Slack{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="{{ url_for('static', filename='favicon-96x96.png') }}"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="{{ url_for('static', filename='favicon.svg') }}"
+    />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
     {% block head %}{% endblock %}
-</head>
-<body>
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
+  </head>
+  <body>
+    <div class="container">{% block content %}{% endblock %}</div>
     {% block scripts %}{% endblock %}
-</body>
+  </body>
 </html>
