--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,11 @@
       "
   /></a>
 </div>
-<p style="margin-top: 30px; font-size: 0.75em">
+<p>
+  View source code:
+  <a href="https://github.com/ndri/slackelo">https://github.com/ndri/slackelo</a>.
+</p>
+<p class="small">
   By installing Slackelo, you agree with the <a href="./privacy">privacy policy</a>.
 </p>
 {% endblock %}
