Add new commands to success page

--- a/templates/success.html
+++ b/templates/success.html
@@ -32,6 +32,9 @@
     <code>/history [@player]</code> - View your game history or another player's history
   </li>
   <li><code>/kfactor [value]</code> - View or set the k-factor for the channel</li>
+  <li><code>/gamble</code> - Toggle doubling your next rating change (win big or lose big)</li>
+  <li><code>/stats</code> - Show channel statistics</li>
+  <li><code>/chart</code> - Show a rating history chart for all players</li>
   <li><code>/undo</code> - Undo the last game in the channel</li>
   <li><code>/help</code> - View all available commands</li>
 </ul>
